@@ -2,8 +2,8 @@
 
 """olive - GUI for popeye
 Usage:
-    olive.py [filename]
-    filename - YAML collection
+    olive.py [filename.olv]
+    filename.olv - YAML collection
 """
 
 # standard
@@ -16,6 +16,7 @@ from PyQt4 import QtGui, QtCore
 import gui
 
 def main():
+    
     # loading configs
     gui.Conf.read()
     gui.Lang.read()
@@ -33,6 +34,10 @@ def main():
     QtGui.QFontDatabase.addApplicationFont('resources/fonts/gc2004y_.ttf')
 
     mainframe = gui.Mainframe()
+    if len(sys.argv) and sys.argv[-1][-4:] == '.olv':
+        mainframe.openCollection(sys.argv[-1])
+
+    
     sys.exit(app.exec_())
 
 
